--- a/marios_specialty_foods/app/views/products/show.html.erb
+++ b/marios_specialty_foods/app/views/products/show.html.erb
@@ -1,5 +1,6 @@
-<h1><%= @product.name %></h1>
-<h3><%= @product.country_of_origin %></h3>
+<h1>Name: <%= @product.name %></h1>
+<h3>Cost: <%= @product.cost %></h3>
+<h3>Origin: <%= @product.country_of_origin %></h3>
 
 <% if @product.reviews.any? %>
   <h4>Here are the reviews for this product:</h4>
