--- a/app/views/products/home.html.erb
+++ b/app/views/products/home.html.erb
@@ -1,23 +1,38 @@
 <h1>Products</h1>
 
-<% if @products.any? %>
-  <ul>
-    <h2>Products of the USA</h2>
-    <% @products.united_states.each do |product| %>
-      <li><%= link_to product.name, product_path(product) %></li>
-    <% end %>
-    <h2>Recently Updated Products</h2>
-    <% @products.recent_products.each do |product| %>
-      <li><%= link_to product.name, product_path(product) %></li>
-    <% end %>
-    <h2>Most Well Reviewed Products</h2>
-    <% @products.review_ratings.each do |product| %>
-      <li><%= link_to product.name, product_path(product) %></li>
-    <% end %>
-  </ul>
-<% else %>
-  <p>There are no products yet.</p>
-<% end %>
+  <h2>Products of the USA</h2>
+    <% if @products.united_states.any? %>
+    <ul>
+          <% @products.united_states.each do |product| %>
+            <li><%= link_to product.name, product_path(product) %></li>
+              <% end %>
+            </ul>
+          <% else %>
+        <p>There are no products from the USA yet.</p>
+          <% end %>
+        <h2>Recently Updated Products</h2>
+    <% if @products.recent_products.any? %>
+    <ul>
+          <% @products.recent_products.each do |product| %>
+            <li><%= link_to product.name, product_path(product) %></li>
+              <% end %>
+            </ul>
+          <% else %>
+        <p>There are no recent products yet.</p>
+          <% end %>
+        <h2>Most Reviewed Products</h2>
+    <% if @products.review_ratings.any? %>
+    <ul>
+          <% @products.review_ratings.each do |product| %>
+            <li><%= link_to product.name, product_path(product) %></li>
+              <% end %>
+            </ul>
+          <% else %>
+        <p>There are no reviewed products yet.</p>
+          <% end %>
+
 
 
 <p><%= link_to "Create new product", new_product_path %></p>
+
+<p><%= link_to "View all products", products_path %></p>
