added ability to login with username or email, and automatic creation of admin account on seeding of database

--- a/app/views/products/home.html.erb
+++ b/app/views/products/home.html.erb
@@ -32,7 +32,7 @@
           <% end %>
 
 
-
+          <% if current_user && current_user.admin %>
 <p><%= link_to "Create new product", new_product_path %></p>
-
+<% end %>
 <p><%= link_to "View all products", products_path %></p>
