--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -10,6 +10,7 @@
 <% else %>
   <p>There are no products yet.</p>
 <% end %>
+<% if current_user && current_user.admin %>
 <p><%= link_to "Create new product", new_product_path %></p>
-
+<% end %>
 <p><%= link_to "Go to Homepage", root_path %></p>
