Admin accounts now actually do something, and are now properly generated

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -10,7 +10,15 @@
 <% else %>
   <p>There are no products yet.</p>
 <% end %>
-<% if current_user && current_user.admin %>
+<% if user_signed_in? %>
+          <%= link_to current_user.email, edit_user_registration_path %>
+          <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+          <p><%= link_to "Change your password", edit_user_registration_path %>
+        <% else %>
+          <%= link_to "Log in", new_user_session_path %>
+          <%= link_to "Register", new_user_registration_path %>
+        <% end %>
+          <% if current_user && current_user.admin %>
 <p><%= link_to "Create new product", new_product_path %></p>
 <% end %>
 <p><%= link_to "Go to Homepage", root_path %></p>
