--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -17,10 +17,10 @@
 <% end %>
 
 <p><%= link_to "Add a review", new_product_review_path(@product) %></p>
-
+<% if current_user && current_user.admin %>
 <p><%= link_to "Edit", edit_product_path(@product) %></p>
 <p><%= link_to "Delete product", product_path(@product),
                         :data => {:confirm => "Are you sure?",
                                        :method => "delete"} %></p>
-
+                                       <% end %>
 <p><%= link_to "Return to products", products_path %></p>
