--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,3 +1,5 @@
+<div class="container-fluid">
+<div class="p-3 mb-2 bg-info text-dark">
 <h1>Name: <%= @product.name %></h1>
 <h3>Cost: <%= @product.cost %></h3>
 <h3>Origin: <%= @product.country_of_origin %></h3>
@@ -16,11 +18,13 @@
   <p>No reviews are listed for this product.</p>
 <% end %>
 
-<p><%= link_to "Add a review", new_product_review_path(@product) %></p>
+<button><%= link_to "Add a review", new_product_review_path(@product) %></butt>
 <% if current_user && current_user.admin %>
-<p><%= link_to "Edit", edit_product_path(@product) %></p>
-<p><%= link_to "Delete product", product_path(@product),
+<button><%= link_to "Edit", edit_product_path(@product) %></button>
+<button><%= link_to "Delete product", product_path(@product),
                         :data => {:confirm => "Are you sure?",
-                                       :method => "delete"} %></p>
+                                       :method => "delete"} %></button>
                                        <% end %>
-<p><%= link_to "Return to products", products_path %></p>
+<button><%= link_to "Return to products", products_path %></button>
+</div>
+</div>
